--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,37 +1,29 @@
-name: Deploy C Program
+name: Build and Deploy C Program
 
 on:
   push:
-    branches:
-      - main   # run only when code is pushed to main branch
+    branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  build-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Compile C program
-      run: gcc main.c -o myapp
+      - name: Build program
+        run: make
 
-    - name: Deploy to server
-      uses: appleboy/scp-action@v0.1.7
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_KEY }}
-        source: "myapp"
-        target: "/home/${{ secrets.USER }}/deployed-app/"
-
-    - name: Run app on server
-      uses: appleboy/ssh-action@v0.1.7
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_KEY }}
-        script: |
-          cd /home/${{ secrets.USER }}/deployed-app
-          nohup ./myapp > output.log 2>&1 &
+      - name: Deploy to Linux server
+        uses: appleboy/ssh-action@v0.1.5
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            sudo cp hello /usr/local/bin/
+            sudo chmod +x /usr/local/bin/hello
+            sudo systemctl daemon-reload
+            sudo systemctl restart hello.service
 
